# Aletheia

./: Makefile  README.md  pyproject.toml  test_out.txt
.github/workflows/: data_generation.yml
aletheia/: __init__.py  train_300m.py
aletheia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aletheia/data/: classical_scraper.py  clean.py  curryhoward.py  dataset.py  primary_source.py  quarantine.py  technical_ingestor.py  tokenizer.py
aletheia/losses/: entropy_reg.py  info_bottleneck.py  metaphor.py
aletheia/model/: __init__.py  bitlinear.py  diffusion.py  ebm.py  interlingua.py  quantization.py  sublayernorm.py  transformer.py  vqvae.py
aletheia/training/: pretrain.py
aletheia/verification/: cross_lingual.py  formal_verifier.py
configs/model/: bitlinear_2b.yaml  bitlinear_300m.yaml  bitlinear_tiny.yaml
data/: arabic_roots.json  panini_rules.json
data/classical/: quarantine_log.jsonl
data/modern/: quarantine_log.jsonl  zenodo.jsonl
data/smoke_test/: ganjoor_rumi.jsonl  quarantine_log.jsonl  zenodo.jsonl
data/smoke_test_tech/: museum_classics.jsonl  syntax_guides.jsonl
data/trg/: test.trg.json  test_c.trg.json  test_hs.trg.json  test_rs.trg.json
scripts/: generate_arabic_roots.py  generate_panini_rules.py
tests/: test_bitlinear.py  test_curryhoward.py  test_data_quarantine.py  test_diffusion.py  test_fairness.py  test_interlingua.py  test_quantization.py  test_vqvae.py
